@@ -19,11 +19,16 @@
 
 </head>
 <body>
+<div id="images" style="display: hidden; position: absolute">
+  <img src="images/barMagnet.png"/>
+</div>
 <div>
     <!-- Canvas -->
     <div>
         <canvas id='example-sim-canvas'>Canvas not supported.</canvas>
     </div>
 </div>
+<!-- Overlay that prevents us from seeing images briefly. -->
+<div id="overlay" style="position: absolute; top:0; width: 100%;height: 100%; left:0; background-color: black"></div>
 </body>
 </html>
